crypto api added .. working on charts

--- a/time_is_money/src/App.css
+++ b/time_is_money/src/App.css
@@ -28,6 +28,26 @@
   color: #61dafb;
 }
 
+/* Create form */
+.create-form::before {
+  position: absolute;
+  content: "$";
+  padding-left: 4px;
+
+}
+
+.create-form input {
+  padding-left: 15px;
+}
+
+.create-form-percentage::after {
+  position: absolute;
+  content: "%"
+}
+
+
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
