--- a/time_is_money/src/App.css
+++ b/time_is_money/src/App.css
@@ -1,5 +1,11 @@
 .App {
   text-align: center;
+  text-decoration: mintcream;
+}
+
+body{
+  color: white;
+  background: linear-gradient(170deg,rgba(169, 144, 93, 1) 15%, rgb(247, 116, 83));
 }
 
 .App-logo {
@@ -21,11 +27,88 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+/* Modal  */
+.modal-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.modal-button {
+  min-width: 100px;
+  padding: 16px 32px;
+  border-radius: 4px;
+  border: none;
+  background: #141414;
+  color: #fff;
+  font-size: 24px;
+  cursor: pointer
+}
+
+/* Watchlist */
+.watchlist-title {
+  padding-bottom: 4vh;
+  /* background: linear-gradient(yellow, blue) */
+}
+
+.watchlist-nav-ul {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  justify-content:space-evenly;
+  padding-left: 4vw;
+  padding-right: 20vw;
+  /* background: linear-gradient(45deg, sandybrown 50%, blue); */
+  font-size: 20px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  /* height: 43px; */
+}
+
+.test {
+  padding: 20px;
+  margin: 20px;
+}
+
+.watchlist-ul {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  justify-content: space-around;
+  gap: 10px 20px;
+  border-top: 4px solid rgb(255, 247, 211);
+  color: white;
+  margin: 0
+}
+
+.watchlist-ul li {
+  border: black;
+}
+
+.each-stock {
+  padding: 20px 50px;
+}
+
+.watchlist-container li {
+  width: 25%;
+  height: 42px;
+}
+
+.watchlist-delete {
+border-radius: 6px;
+background: linear-gradient(100deg,red 5%, orange);
+color: rgba(90, 10, 71, 0.884);
+}
+
+.watchlist-edit {
+border-radius: 6px;
+background: linear-gradient(100deg, rgba(10, 47, 129, 0.822) 5%, orange)
 }
 
 /* Create form */
@@ -45,7 +128,11 @@
   content: "%"
 }
 
-
+/* Stocks */
+.stock-ul {
+  list-style-type: none;
+  padding-bottom: 8vh;
+}
 
 
 @keyframes App-logo-spin {
