fully functional .. last set of styling

--- a/time_is_money/src/App.css
+++ b/time_is_money/src/App.css
@@ -134,6 +134,16 @@ background: linear-gradient(100deg, rgba(10, 47, 129, 0.822) 5%, orange)
   padding-bottom: 8vh;
 }
 
+/* Edit/Create Form */
+
+.edit-modal, .create-modal {
+  color: Black
+}
+
+.edit-label {
+  display: flex;
+  float:left;
+}
 
 @keyframes App-logo-spin {
   from {
