complete..except readMe

--- a/time_is_money/src/App.css
+++ b/time_is_money/src/App.css
@@ -1,6 +1,8 @@
 .App {
   text-align: center;
   text-decoration: mintcream;
+  font-family: 'Slabo 27px', serif;
+  font-weight: 900;
 }
 
 body{
@@ -33,6 +35,10 @@ body{
   color: #61dafb;
 }
 
+li {
+  list-style-type: none;
+}
+
 /* Modal  */
 .modal-div {
   display: flex;
@@ -55,31 +61,27 @@ body{
 /* Watchlist */
 .watchlist-title {
   padding-bottom: 4vh;
-  /* background: linear-gradient(yellow, blue) */
 }
 
 .watchlist-nav-ul {
   display: flex;
   flex-direction: row;
-  list-style-type: none;
   justify-content:space-evenly;
   padding-left: 4vw;
   padding-right: 20vw;
-  /* background: linear-gradient(45deg, sandybrown 50%, blue); */
   font-size: 20px;
   font-family: Georgia, 'Times New Roman', Times, serif;
-  /* height: 43px; */
 }
 
-.test {
+.watchlist {
   padding: 20px;
   margin: 20px;
+  min-height: 100vh;
 }
 
 .watchlist-ul {
   display: flex;
   flex-direction: row;
-  list-style-type: none;
   justify-content: space-around;
   gap: 10px 20px;
   border-top: 4px solid rgb(255, 247, 211);
@@ -111,6 +113,27 @@ border-radius: 6px;
 background: linear-gradient(100deg, rgba(10, 47, 129, 0.822) 5%, orange)
 }
 
+.watchlist-btns {
+  display:flex;
+  justify-content: space-evenly;
+}
+
+.track-stock {
+  border-radius: 6px;
+  background: linear-gradient(100deg,red 5%, yellow, purple);
+  color: rgba(90, 10, 71, 0.884);
+  font-size: 17px;
+  font-weight: bold;
+}
+
+.track-crypto {
+  border-radius: 6px;
+  background: linear-gradient(35deg, rgb(0, 60, 255), rgb(72, 255, 0), purple);
+  color: rgba(61, 53, 59, 0.884);
+  font-size: 17px;
+  font-weight: bold;
+}
+
 /* Create form */
 .create-form::before {
   position: absolute;
@@ -134,6 +157,71 @@ background: linear-gradient(100deg, rgba(10, 47, 129, 0.822) 5%, orange)
   padding-bottom: 8vh;
 }
 
+.see-crypto {
+  border-radius: 6px;
+  background: linear-gradient(-100deg,red , yellow , green);
+  color: rgba(90, 10, 71, 0.884);
+  font-size: 17px;
+  font-weight: bold;
+
+}
+
+.see-watchlist {
+  border-radius: 6px;
+  background: linear-gradient(45deg,red , rgb(255, 174, 0), purple);
+  color: rgba(90, 10, 71, 0.884);
+  font-size: 17px;
+  padding: 10px;
+  font-weight: bold;
+}
+
+.add-stock {
+  border-radius: 6px;
+  background: linear-gradient(45deg,red 5%, blue);
+  color: rgba(209, 197, 206, 0.884);
+  font-size: 17px;
+  font-weight: bold;
+}
+
+.btns-stocks {
+  display: flex;
+  justify-content: space-around;
+  padding: 15px 0px;
+}
+
+.add-stock-position {
+  float: right;
+  margin-right: 65px;
+}
+
+.track-crypto-position {
+  float:left;
+  margin-left: 65px;
+}
+
+.stock-ul, .crypto-ul {
+  padding-top: 35px;
+  font-size: 20px;
+}
+
+.stock-stock-ticker{
+  width:25%;
+}
+
+.stock-date{
+  width: 20%;
+}
+
+.ticker-group {
+  display: flex;
+  justify-content:center;
+  padding: 15px 0px;
+}
+
+.submit {
+  padding-left: 10px;
+}
+
 /* Edit/Create Form */
 
 .edit-modal, .create-modal {
@@ -144,6 +232,44 @@ background: linear-gradient(100deg, rgba(10, 47, 129, 0.822) 5%, orange)
   display: flex;
   float:left;
 }
+.label {
+  font-size: 20px;
+  /* font-weight: bold; */
+}
+
+/* Cryptos */
+.cryptos {
+  background: linear-gradient(170deg,rgba(169, 144, 93, 1) 15%, rgb(247, 116, 83));
+  min-height: 100vh;
+}
+
+.crypto-ticker, .crypto-date {
+  width: 20%
+}
+
+.crypto-to {
+  width: 21%;
+}
+
+.btns-cryptos {
+  display: flex;
+  justify-content: space-around;
+  padding: 15px 0px
+}
+
+.crypto-header, .stock-title {
+  padding-top: 20px;
+}
+
+.see-stocks {
+  border-radius: 6px;
+  background: linear-gradient(100deg,red 5%, yellow);
+  color: rgba(90, 10, 71, 0.884);
+  font-size: 17px;
+  font-weight: bold;
+}
+
+
 
 @keyframes App-logo-spin {
   from {
